Bug 406630 - "Properties" window says "Device usage" while you are seeing the usage of a partition
Summary: "Properties" window says "Device usage" while you are seeing the usage of a p...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-04-17 15:33 UTC by Patrick Silva
Modified: 2019-04-18 21:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.58
Sentry Crash Report:


Attachments
screenshot (78.82 KB, image/png)
2019-04-17 15:33 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-04-17 15:33:39 UTC
Created attachment 119460 [details]
screenshot

STEPS TO REPRODUCE
1. have a hd/ssd with two or more partitions
2. access any of your partitions with Dolphin, right click on empty space,
select "Properties"
3. 

OBSERVED RESULT
As we can see in attached screenshot, "Properties" window shows "Device usage" when in fact it's just the usage
of the current partition.

EXPECTED RESULT
accurate label like "Partition usage"

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2
Comment 1 Nate Graham 2019-04-17 18:26:09 UTC
This dialog comes from KIO; moving there.
Comment 2 Nate Graham 2019-04-18 19:03:59 UTC
Patch: https://phabricator.kde.org/D20673
Comment 3 Nate Graham 2019-04-18 21:05:28 UTC
Git commit f8328c008e019fbd58c4908a6ba3157fb9f50bff by Nate Graham.
Committed on 18/04/2019 at 21:05.
Pushed by ngraham into branch 'master'.

[Properties dialog] Use the string "Free space" instead of "Disk usage"

Summary:
"Disk usage" is inaccurate when you happen to be looking at a partition. And "Free space"
better conveys the information that the user is looking for: how much space is available.
FIXED-IN: 5.58

Test Plan: {F6780308}

Reviewers: #vdg, filipf

Reviewed By: #vdg, filipf

Subscribers: filipf, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20673

M  +2    -2    src/widgets/kpropertiesdialog.cpp

https://commits.kde.org/kio/f8328c008e019fbd58c4908a6ba3157fb9f50bff