[Properties dialog] Use the string "Free space" instead of "Disk usage"

Summary:
"Disk usage" is inaccurate when you happen to be looking at a partition. And "Free space"
better conveys the information that the user is looking for: how much space is available.

BUG: 406630
FIXED-IN: 5.58

Test Plan: {F6780308}

Reviewers: #vdg, filipf

Reviewed By: #vdg, filipf

Subscribers: filipf, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20673